# py-simple-image-classification-api

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml
window_detector/: main.py  model.keras
window_opened_detector_model/: clean_data.py  main.py
